--- a/webmanifest.json
+++ b/webmanifest.json
@@ -4,6 +4,8 @@
   "name": "Astro PWA | The recipe",
   "short_name": "Astro PWA",
   "description": "Example PWA for Astro using Vite-PWA",
+  "orientation": "portrait",
+  "display": "standalone",
   "theme_color": "#ff5d01",
   "background_color": "#11191f",
   "icons": [
