--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   "dependencies": {
     "@astrojs/mdx": "^2.0.0",
     "@astrojs/node": "^7.0.0",
+    "@astrojs/solid-js": "^3.0.2",
     "@astrojs/vercel": "^6.0.0",
     "@picocss/pico": "2.0.0-alpha1",
-    "astro": "^4.0.2"
+    "astro": "^4.0.2",
+    "solid-js": "^1.4.3"
   },
   "devDependencies": {
     "@astrojs/check": "^0.3.1",
     "@vite-pwa/assets-generator": "^0.0.11",
     "@vite-pwa/astro": "^0.2.0",
     "nanoid": "^5.0.4",
+    "sharp": "^0.33.1",
     "typescript": "^5.3.2",
     "vite-plugin-pwa": "^0.17.3",
     "workbox-core": "^7.0.0",
